--- a/exercises/src/main/resources/application.conf
+++ b/exercises/src/main/resources/application.conf
@@ -1,1 +1,14 @@
 include "telemetry.conf"
+
+akka {
+  # Logging configuration for Akka
+  loggers = [akka.event.slf4j.Slf4jLogger]
+  loglevel = DEBUG
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
+  actor {
+    debug {
+      unhandled = on  # Enable unhandled logging, this way all unhandled messages will be logged
+    }
+  }
+}
