Exercise 5: Child Actors - completed

--- a/exercises/src/main/resources/application.conf
+++ b/exercises/src/main/resources/application.conf
@@ -8,7 +8,8 @@ akka {
 
   actor {
     debug {
-      unhandled = on  # Enable unhandled logging, this way all unhandled messages will be logged
+      unhandled = on  # Enables unhandled logging, this way all unhandled messages will be logged
+      lifecycle = on  # Enables more outupt in logs, allows to see when actors are created, etc ...
     }
   }
 }
