Exercise 7: Use Scheduler - completed

--- a/exercises/src/main/resources/application.conf
+++ b/exercises/src/main/resources/application.conf
@@ -1,15 +1,24 @@
 include "telemetry.conf"
 
+# Akka configuration
 akka {
-  # Logging configuration for Akka
+  # Logging configuration
   loggers = [akka.event.slf4j.Slf4jLogger]
   loglevel = DEBUG
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
+  # Actors configuration
   actor {
     debug {
       unhandled = on  # Enables unhandled logging, this way all unhandled messages will be logged
       lifecycle = on  # Enables more outupt in logs, allows to see when actors are created, etc ...
     }
+  }
+}
+
+# App configuration
+coffee-house {
+  guest {
+    finish-coffee-duration = 2 seconds  # Time that a guest takes to drink a coffee
   }
 }
