Exercise 8: Busy Actors - completed

--- a/exercises/src/main/resources/application.conf
+++ b/exercises/src/main/resources/application.conf
@@ -21,4 +21,8 @@ coffee-house {
   guest {
     finish-coffee-duration = 2 seconds  # Time that a guest takes to drink a coffee
   }
+
+  barista {
+    prepare-coffee-duration = 2 seconds  # Time tha a barista takes to prepare a coffee
+  }
 }
