Exercise 9: Stop Actors - completed

--- a/exercises/src/main/resources/application.conf
+++ b/exercises/src/main/resources/application.conf
@@ -18,6 +18,8 @@ akka {
 
 # App configuration
 coffee-house {
+  caffeine-limit = 5  # Maximum number of coffees that a guest can order (terminates after that)
+
   guest {
     finish-coffee-duration = 2 seconds  # Time that a guest takes to drink a coffee
   }
