Exercise 13: Faulty Waiter - completed

--- a/exercises/src/main/resources/application.conf
+++ b/exercises/src/main/resources/application.conf
@@ -25,6 +25,11 @@ coffee-house {
   }
 
   barista {
-    prepare-coffee-duration = 2 seconds  # Time tha a barista takes to prepare a coffee
+    prepare-coffee-duration = 2 seconds  # Time that a barista takes to prepare a coffee
+    accuracy = 20  # Accuracy (between 0 and 100) with which a barista picks the correct coffee
+  }
+
+  waiter {
+    max-complaint-count = 2  # Maximum number of complaints a waiter can receive before gettins frustrasted
   }
 }
