Exercise 16: Implement a Router - completed

--- a/exercises/src/main/resources/application.conf
+++ b/exercises/src/main/resources/application.conf
@@ -13,6 +13,14 @@ akka {
       unhandled = on  # Enables unhandled logging, this way all unhandled messages will be logged
       lifecycle = on  # Enables more outupt in logs, allows to see when actors are created, etc ...
     }
+
+    deployment {
+      # Router configurations for the Barista
+      /coffee-house/barista {
+        router = round-robin-pool
+        nr-of-instances = 4
+      }
+    }
   }
 }
 
