Exercise 17: Configure Dispatcher - completed

--- a/exercises/src/main/resources/application.conf
+++ b/exercises/src/main/resources/application.conf
@@ -18,7 +18,15 @@ akka {
       # Router configurations for the Barista
       /coffee-house/barista {
         router = round-robin-pool
-        nr-of-instances = 4
+        nr-of-instances = 12
+      }
+    }
+
+    default-dispatcher {
+      fork-join-executor {
+        parallelism-min = 4
+        parallelism-factor = 2.0
+        parallelism-max = 16
       }
     }
   }
