Exercise 19: Ask Pattern - completed

--- a/exercises/src/main/resources/application.conf
+++ b/exercises/src/main/resources/application.conf
@@ -35,6 +35,7 @@ akka {
 # App configuration
 coffee-house {
   caffeine-limit = 1000  # Maximum number of coffees that a guest can order (terminates after that)
+  status-timeout = 5 seconds  # Maximum time to wait for the status answer
 
   guest {
     finish-coffee-duration = 2 seconds  # Time that a guest takes to drink a coffee
@@ -48,4 +49,5 @@ coffee-house {
   waiter {
     max-complaint-count = 2  # Maximum number of complaints a waiter can receive before gettins frustrasted
   }
+
 }
